--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -4,6 +4,6 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+How is it going? You came to the wrong page lol.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
