--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -4,6 +4,13 @@
 
 <h1>Hello, world!</h1>
 
+<p>Hello, the time on the server is...</p>
+<p> @DateTime.Now</p>
+
+Sorry!
+
 How is it going? You came to the wrong page lol.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<Counter />
