--- a/BlazorApp/Pages/Counter.razor
+++ b/BlazorApp/Pages/Counter.razor
@@ -6,7 +6,10 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Up</button>
+<button class="btn btn-primary" @onclick="DecrementCount">Down</button>
+<button class="btn btn-primary" @onclick="Byten">Super Up</button>
+<button class="btn btn-primary" @onclick="Subten">Super Down</button>
 
 @code {
     private int currentCount = 0;
@@ -15,4 +18,20 @@
     {
         currentCount++;
     }
+
+    private void DecrementCount()
+    {
+        currentCount--;
+    }
+
+    private void Byten()
+    {
+        currentCount += 10;
+    }
+
+    private void Subten()
+    {
+        currentCount -=10; 
+    }
+
 }
