--- a/BlazorApp/Pages/Counter.razor
+++ b/BlazorApp/Pages/Counter.razor
@@ -1,8 +1,8 @@
 ﻿@page "/counter"
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Awesome Counter</PageTitle>
 
-<h1>Counter</h1>
+<h1>Benevolent Counter</h1>
 
 <p role="status">Current count: @currentCount</p>
 
