--- a/BlazorApp/Pages/Counter.razor
+++ b/BlazorApp/Pages/Counter.razor
@@ -6,10 +6,8 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Up</button>
-<button class="btn btn-primary" @onclick="DecrementCount">Down</button>
-<button class="btn btn-primary" @onclick="Byten">Super Up</button>
-<button class="btn btn-primary" @onclick="Subten">Super Down</button>
+<button class="btn btn-primary" @onclick="Byten">Click Me</button>
+<button class="btn btn-primary" @onclick="DecrementCount">Click me to see minus</button>
 
 @code {
     private int currentCount = 0;
